HIVE-21297: Replace all occurences of new Long, Boolean, Double etc with the corresponding .valueOf (Ivan Suller via )
Signed-off-by: Zoltan Haindrich <kirk@rxd.hu>